--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 authors = [
-    { name = "Patrick Sadil", email = "psadil@gmail.com" }
+    { name = "Patrick Sadil", email = "psadil@gmail.com" },
+    { name = "Json Kai", email = "jason.kai@childmind.org" },
 ]
 requires-python = ">=3.12"
 dependencies = []
