--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.12"
 dependencies = [
     "bids2table[s3]>=2.1.0",
     "polars>=1.31.0",
+    "templateflow>=24.2.2",
 ]
 
 [project.scripts]
