add basic ability to store jpgs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,15 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "bids2table[s3]>=2.1.0",
+    "matplotlib>=3.10.3",
     "niwrap-afni>=0.6.1",
     "polars>=1.31.0",
+    "pydantic>=2.11.7",
     "templateflow>=24.2.2",
 ]
 
 [project.scripts]
-bids2afniqcjson = "main:main"
+bids2afniqcjson = "bids2afniqcjson:main.main"
 
 [build-system]
 requires = ["hatchling"]
